--- a/src/main/resources/templates/mission-types/create-mission-type.html
+++ b/src/main/resources/templates/mission-types/create-mission-type.html
@@ -22,7 +22,7 @@
                 </form>
             </div>
             <div class="card-footer">
-                <a class="btn btn-secondary pb-2" th:href="@{/mission-types}">Annuler</a>
+                <a class="btn btn-outline-secondary pb-2" th:href="@{/mission-types}">Annuler</a>
                 <button type="submit" form="newMissionTypeForm" class="btn btn-primary">Créer</button>
             </div>
         </div>
