--- a/src/main/resources/templates/fragments/missions/planned-missions.html
+++ b/src/main/resources/templates/fragments/missions/planned-missions.html
@@ -44,8 +44,8 @@
                         <a class="btn btn-success btn-sm" th:href="@{/missions/confirm/{id}(id=${plannedMission.id})}"><i class="bi bi-person-add"></i></a>
                         <!-- Editer -->
                         <a class="btn btn-primary btn-sm" th:href="@{/missions/edit/planned/{id}(id=${plannedMission.id})}"><i class="bi bi-pencil-square"></i></a>
-                        <!-- Supprimer -->
-                        <a class="btn btn-danger btn-sm" th:href="@{/missions/delete/{id}(id=${plannedMission.id})}"><i class="bi bi-trash"></i></a>
+                        <!-- Annuler -->
+                        <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#cancelMissionModal" th:attr="data-mission-id=${plannedMission.id}"><i class="bi bi-x-square"></i></button>
                         <!-- Voir -->
                         <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${plannedMission.id})}"><i class="bi bi-eye"></i></a>
                     </td>
