--- a/src/main/resources/templates/mission-types/edit-type.html
+++ b/src/main/resources/templates/mission-types/edit-type.html
@@ -7,7 +7,6 @@
     <div class="row">
         <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
             <div class="card-header">
-                <a class="btn btn-secondary" th:href="@{/mission-types}">Retour</a>
                 <h1>Mise à jour</h1>
             </div>
             <div class="card-body">
@@ -25,6 +24,7 @@
                 </form>
             </div>
             <div class="card-footer">
+                <a class="btn btn-outline-secondary pb-2" th:href="@{/mission-types}">Annuler</a>
                 <button type="submit" form="editMissionTypeForm" class="btn btn-primary">Mettre à jour</button>
             </div>
         </div>
