--- a/src/main/resources/templates/missions/new-mission/edit-new-mission.html
+++ b/src/main/resources/templates/missions/new-mission/edit-new-mission.html
@@ -15,7 +15,6 @@
     <div class="row">
         <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
             <div class="card-header">
-                <a class="btn btn-secondary pb-2" th:href="@{/missions}">Retour</a>
                 <h1>Mise à jour</h1>
             </div>
             <div class="card-body">
@@ -52,6 +51,7 @@
                 </form>
             </div>
             <div class="card-footer">
+                <a class="btn btn-outline-secondary pb-2" th:href="@{/missions}">Annuler</a>
                 <button type="submit" form="editNewMissionForm" class="btn btn-primary">Mettre à jour</button>
             </div>
         </div>
