--- a/src/main/resources/templates/volunteers/volunteer/edit-volunteer.html
+++ b/src/main/resources/templates/volunteers/volunteer/edit-volunteer.html
@@ -6,10 +6,12 @@
     <div class="row">
         <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
             <div class="card-header">
-                <h1>Nouveau bénévole</h1>
+                <h1>Mise à jour</h1>
             </div>
             <div class="card-body">
-                <form th:action="@{/volunteers}" method="post" id="newVolunteerForm" th:object="${volunteer}">
+                <form th:action="@{/volunteers/update/{id}(id=${volunteer.id})}" method="post" id="editVolunteerForm" th:object="${volunteer}">
+                    <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
+                    <input type="hidden" name="id" id="id" th:field="*{id}">
                     <div class="form-group">
                         <label for="lastName" class="col-form-label">Nom :</label>
                         <input th:field="*{lastName}" type="text" id="lastName" class="form-control" required="required">
@@ -28,10 +30,12 @@
                         <label for="phoneNumber" class="col-form-label">Téléphone :</label>
                         <input th:field="*{phoneNumber}" type="text" id="phoneNumber" class="form-control">
                     </div>
+
                 </form>
             </div>
             <div class="card-footer">
-                <button type="submit" form="newVolunteerForm" class="btn btn-primary">Créer</button>
+                <a class="btn btn-outline-secondary pb-2" th:href="@{/volunteers}">Annuler</a>
+                <button type="submit" form="editVolunteerForm" class="btn btn-primary">Mettre à jour</button>
             </div>
         </div>
     </div>
