try modal on workflow for volunteer. Refactor workflow

--- a/src/main/resources/templates/missions/missions.html
+++ b/src/main/resources/templates/missions/missions.html
@@ -35,6 +35,7 @@
             </div>
         </div>
     </div>
+    <div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
 
     <!-- Modal pour la confirmation de suppression -->
     <div class="modal fade" id="deleteMissionModal" tabindex="-1" aria-labelledby="deleteMissionModalLabel" aria-hidden="true">
