--- a/src/main/resources/templates/volunteers/volunteers.html
+++ b/src/main/resources/templates/volunteers/volunteers.html
@@ -70,6 +70,7 @@
             </div>
         </div>
     </div>
+    <div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
     <!-- Modal pour la confirmation de suppression -->
     <div class="modal fade" id="deleteVolunteerModal" tabindex="-1" aria-labelledby="deleteVolunteerModalLabel" aria-hidden="true">
         <div class="modal-dialog">
